@@ -7236,14 +7236,15 @@ void menu_settings_display(MENU_ITEM_PARAMETERS)
 			}
 
 
+
+		}
+
+        if (MACHINE_IS_SPECTRUM) {
 			menu_add_item_menu_format(array_menu_settings_display,MENU_OPCION_NORMAL,menu_display_refresca_sin_colores,NULL,"[%c] Colours enabled",(scr_refresca_sin_colores.v==0 ? 'X' : ' '));
 			menu_add_item_menu_tooltip(array_menu_settings_display,"Disables colours for Spectrum display");
 			menu_add_item_menu_ayuda(array_menu_settings_display,"Disables colours for Spectrum display");
             menu_add_item_menu_es_avanzado(array_menu_settings_display);
-
-
-
-		}
+        }
 
 
 
